# TerraForge-tauri

./: .gitignore  README.md  build.ps1  build.sh
TerraForgeRust/: BUILD.md  Cargo.toml  README.md
TerraForgeRust/cli/: Cargo.toml
TerraForgeRust/cli/src/: main.rs
TerraForgeRust/core/: Cargo.toml
TerraForgeRust/core/src/: biomes.rs  brush.rs  combine.rs  erosion.rs  io.rs  lib.rs  mesh.rs  noise.rs  presets.rs  roads.rs  scatter.rs  shapes.rs  upscale.rs
TerraForgeRust/tauri/src-tauri/: Cargo.toml  tauri.conf.json
TerraForgeRust/tauri/src-tauri/capabilities/: default.json
TerraForgeRust/tauri/src-tauri/icons/: icon.icns
TerraForgeRust/tauri/src-tauri/src/: main.rs
frontend/: package.json
frontend/src/: App.js  index.css
frontend/src/TerraForge/: README.md
frontend/src/TerraForge/components/: BiomePanel.jsx  BrushPanel.jsx  CombinePanel.jsx  GeneratorPanel.jsx  MiniMap.jsx  PresetSelector.jsx  RoadPanel.jsx  Slider2.jsx  TerrainViewer3D.jsx  UpscalerPanel.jsx  VegetationPanel.jsx
frontend/src/TerraForge/lib/: biomes.js  brush.js  combine.js  geology.js  heightmap.js  presets.js  roads.js  scatter.js  shapes.js  tauri.js  terrainGen.js  water.js  waterMask.js
frontend/src/TerraForge/lib/webgpu/: gpuNoise.js
frontend/src/TerraForge/nodes/: NodeGraph.jsx  executor.js  nodeTypes.jsx
frontend/src/TerraForge/pages/: TerrainStudio.jsx
memory/: PRD.md  fix_plan_2026-02-24.md
