[package]
name = "terraforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line front-end for the TerraForge heightmap pipeline"

[[bin]]
name = "terraforge"
path = "src/main.rs"

[dependencies]
terraforge-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
