[package]
name = "terraforge-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "TerraForge Tauri app — reuses the React UI with a Rust backend"

[[bin]]
name = "terraforge-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
terraforge-core = { path = "../../core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
